--- a/src/ggl.core.vcxproj
+++ b/src/ggl.core.vcxproj
@@ -87,7 +87,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;LODEPNG_NO_COMPILE_CPP;LODEPNG_NO_COMPILE_ENCODER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>c:\glew\include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -146,18 +146,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="asset.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="glsl.c" />
+    <ClCompile Include="lodepng.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="scene.c" />
     <ClCompile Include="sprite.c" />
     <ClCompile Include="texture.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="asset.h" />
     <ClInclude Include="dbg.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="ggl.h" />
     <ClInclude Include="glsl.h" />
+    <ClInclude Include="lodepng.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="sprite.h" />
     <ClInclude Include="texture.h" />
