--- a/src/ggl.core.vcxproj
+++ b/src/ggl.core.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="tree.c" />
     <ClCompile Include="vertex.c" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="asset.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="texture.h" />
     <ClInclude Include="tree.h" />
     <ClInclude Include="vertex.h" />
+    <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
