--- a/src/ggl.core.vcxproj
+++ b/src/ggl.core.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sprite.cpp" />
+    <ClCompile Include="spritebatch.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="tree.c" />
     <ClCompile Include="vertex.c" />
@@ -167,6 +168,7 @@
     <ClInclude Include="glsl.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="sprite.h" />
+    <ClInclude Include="spritebatch.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="tree.h" />
     <ClInclude Include="vertex.h" />
