--- a/src/ggl.core.vcxproj.filters
+++ b/src/ggl.core.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="spritebatch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spritebatch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
