--- a/ggl.tutorial/ggl.tutorial.vcxproj
+++ b/ggl.tutorial/ggl.tutorial.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{58A1B4A4-55C6-42D0-BD45-F385A37A49EB}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>gglcore</RootNamespace>
+    <RootNamespace>ggltutorial</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>ggl.tutorial</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -88,13 +89,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;LODEPNG_NO_COMPILE_ENCODER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\SDL2\include;c:\glew\include;C:\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\glm;C:\glew\include;C:\SDL2\include;$(SolutionDir)ggl\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;native_midi.lib;timidity.lib;opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\glew\lib\Release\Win32;C:\SDL2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ggl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -146,35 +147,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\asset.c" />
-    <ClCompile Include="src\camera2d.cpp" />
     <ClCompile Include="src\game.cpp" />
-    <ClCompile Include="src\glsl.cpp" />
-    <ClCompile Include="src\inputmanager.cpp" />
-    <ClCompile Include="src\lodepng.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\sprite.cpp" />
-    <ClCompile Include="src\spritebatch.cpp" />
-    <ClCompile Include="src\texture.cpp" />
-    <ClCompile Include="src\tree.c" />
-    <ClCompile Include="src\vertex.c" />
-    <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\asset.h" />
-    <ClInclude Include="src\camera2d.h" />
-    <ClInclude Include="src\dbg.h" />
     <ClInclude Include="src\game.h" />
-    <ClInclude Include="src\ggl.h" />
-    <ClInclude Include="src\glsl.h" />
-    <ClInclude Include="src\inputmanager.h" />
-    <ClInclude Include="src\lodepng.h" />
-    <ClInclude Include="src\sprite.h" />
-    <ClInclude Include="src\spritebatch.h" />
-    <ClInclude Include="src\texture.h" />
-    <ClInclude Include="src\tree.h" />
-    <ClInclude Include="src\vertex.h" />
-    <ClInclude Include="src\window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ggl\ggl.vcxproj">
+      <Project>{081f0cda-40d7-47b3-a397-5e7b516e0025}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
