Moving back to C api

--- a/ggl/ggl.vcxproj.filters
+++ b/ggl/ggl.vcxproj.filters
@@ -86,9 +86,6 @@
     <ClCompile Include="src\glsl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\inputmanager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\lodepng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -102,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\inputmanager.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
